# dog_walker

./: .gitignore  README.md  config.toml  pyproject.toml
docs/: design.md
docs/superpowers/plans/: 2026-07-02-slim-agent-harness.md  2026-07-08-runs-table.md
docs/superpowers/specs/: 2026-07-08-runs-table-design.md
src/dog_walker/: config.py  loop.py  main.py  types.py
src/dog_walker/providers/: anthropic.py  base.py  fake.py  ollama.py
src/dog_walker/storage/: base.py  sqlite.py
src/dog_walker/tools/: base.py  builtin.py
src/middlemanager/: loop.py  main.py
src/middlemanager/providers/: anthropic.py  base.py  fake.py  ollama.py
src/middlemanager/storage/: base.py  sqlite.py
src/middlemanager/tools/: base.py  builtin.py
tests/: test_anthropic_adapter.py  test_config.py  test_fake_provider.py  test_loop.py  test_ollama_adapter.py  test_storage.py  test_tools.py  test_types.py  test_wiring.py
