[project]
name = "middlemanager"
version = "0.1.0"
description = "A slim LLM agent harness for learning."
requires-python = ">=3.11"
dependencies = ["anthropic>=0.40"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
middlemanager = "middlemanager.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
